refactor: play 도메인 내 리팩토링 실시 (#37)
* refactor: 도메인 내 일급 컬렉션 -> FirstClassCollection 추상 클래스

* refactor: MemberIdMapper -> 실제는 Mapper가 아니었기에 삭제하고 적절한 class들로 대체