@@ -5,7 +5,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -29,8 +29,29 @@ class PlayReaderTest {
         .title("My List")
         .thumbnail("panda.png")
         .build()));
-    var listOfPlay = new Plays(
-      Arrays.asList(
+
+    when(allPlay.readAllBelongsTo(request.validRequestForPlaylist().playlist().id()))
+      .thenReturn(new Plays(
+        List.of(
+          Play.builder()
+            .id(1L)
+            .playlistId(request.validRequestForPlaylist().playlist().id())
+            .info(new PlayInfo("So Good Music", "abcd1234", "panda.png"))
+            .sequence(0L)
+            .time(new PlayTime(1000L, 10000L))
+            .channel(new Channel("Music man", "mike.png"))
+            .build(),
+          Play.builder()
+            .id(2L)
+            .playlistId(request.validRequestForPlaylist().playlist().id())
+            .info(new PlayInfo("So Sad Music", "qwer1234", "puppy.png"))
+            .sequence(1L)
+            .time(new PlayTime(1500L, 20000L))
+            .channel(new Channel("Music man", "mike.png"))
+            .build())));
+
+    var expected = new Plays(
+      List.of(
         Play.builder()
           .id(1L)
           .playlistId(request.validRequestForPlaylist().playlist().id())
@@ -47,12 +68,10 @@ class PlayReaderTest {
           .time(new PlayTime(1500L, 20000L))
           .channel(new Channel("Music man", "mike.png"))
           .build()));
-    when(allPlay.readAllBelongsTo(request.validRequestForPlaylist().playlist().id()))
-      .thenReturn(listOfPlay);
 
     var actual = reader.readAllPlays(request);
 
-    assertThat(actual, is(listOfPlay));
+    assertThat(actual, is(expected));
     verify(allPlay).readAllBelongsTo(request.validRequestForPlaylist().playlist().id());
     verifyNoMoreInteractions(allPlay);
   }
